Fixed menu-phone being visible with scrolling despite being outside of viewport.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>koutsouradis</title>
-    <link rel="shortcut icon" href="./assets/Logo/FaviconLogo.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/Logo/FaviconLogo.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <script
       src="https://kit.fontawesome.com/d28c160745.js"
@@ -21,7 +25,7 @@
             <img
               src="./assets/Logo/koutsouradis Logo + text.png"
               alkkt="koutsouradis CREATIVE STUDIO"
-            /></a>
+          /></a>
         </div>
         <div class="menu-laptop">
           <ul>
@@ -51,28 +55,30 @@
       </nav>
     </header>
     <!-- This container is somewhat outside of DOM flow. Default position to the right of the page. When visible(user clicks hamburger icon) it scrolls to screen. -->
-    <div class="menu-phone">
-      <ul>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">Services</a>
-        </li>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">Works</a>
-        </li>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">About Us</a>
-        </li>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">Team</a>
-        </li>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">Contact</a>
-        </li>
-        <li class="menu-phone-items item">
-          <a href="#" class="item">Insights</a>
-        </li>
-      </ul>
-      <i class="fa-solid fa-xmark close-btn"></i>
+    <div class="menu-phone-container">
+      <div class="menu-phone">
+        <ul>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">Services</a>
+          </li>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">Works</a>
+          </li>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">About Us</a>
+          </li>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">Team</a>
+          </li>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">Contact</a>
+          </li>
+          <li class="menu-phone-items item">
+            <a href="#" class="item">Insights</a>
+          </li>
+        </ul>
+        <i class="fa-solid fa-xmark close-btn"></i>
+      </div>
     </div>
     <main>
       <div class="main-content-logo-container">
