--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo">
+        <div class="logo-container">
           <a href="#">
             <img
               src="./assets/Logo/koutsouradis Logo + text.png"
@@ -55,25 +55,26 @@
       </nav>
     </header>
     <!-- This container is somewhat outside of DOM flow. Default position to the right of the page. When visible(user clicks hamburger icon) it scrolls to screen. -->
+    <!-- If this extra(outside) container is absent then menu-phone is always visible via scrolling despide "overflow-x: hidden" on body element. By adding to it "position: relative" the child "position: fixed" is hidden by being overflown. -->
     <div class="menu-phone-container">
       <div class="menu-phone">
         <ul>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">Services</a>
           </li>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">Works</a>
           </li>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">About Us</a>
           </li>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">Team</a>
           </li>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">Contact</a>
           </li>
-          <li class="menu-phone-items item">
+          <li class="menu-phone-items">
             <a href="#" class="item">Insights</a>
           </li>
         </ul>
@@ -81,12 +82,14 @@
       </div>
     </div>
     <main>
+      <!-- Logo inside images' container. -->
       <div class="main-content-logo-container">
         <img
           src="./assets/Logo/KoutsouradisLogoSmall.png"
           alt="KoutsouradisLogoSmall"
         />
       </div>
+      <!-- Container with all images. -->
       <div class="main-content-container">
         <img
           src="./assets/Img/First - Fragos.png"
@@ -164,6 +167,7 @@
           class="round-corner"
         />
       </div>
+      <!-- Container with all social links at the bottom. -->
       <div class="bottom-social-container">
         <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
         <a href="#"><i class="fa-brands fa-instagram"></i></a>
